--- a/index.html
+++ b/index.html
@@ -7,83 +7,44 @@
     <title>Homotronics - Online Shop</title>
   </head>
   <body>
-    <div id="app">
-      <div class="container">
-        <main>
-          <header>
-            <nav>
-              <a href="#">
-                <p class="logo">Homotronics</p>
-                <p class="logo_descript">Online Shop</p>
-              </a>
-              <button class="btn btn-cart" @click="viewCart">
-                Cart <span>{{this.cart.length}}</span>
-              </button>
-            </nav>
-            <div class="slider"></div>
-          </header>
-          <div class="catalog">
-            <h1>Catalog</h1>
-            <div class="items">
-              <div class="item" v-for="item in items" :key="item.id">
-                <img :src="'../img/' + item.id + '.jpeg'" alt="" />
-                <h3>{{item.title}}</h3>
-                <p class="descript">{{item.descript}}</p>
-                <p class="onstock">On stock: {{item.qty_onstore}}</p>
-                <p class="price">{{item.price}} USD</p>
-                <div class="qty-count">
-                  <button class="btn-decr" @click="decrement(item)">-</button>
-                  <div class="qty">{{item.qty}}</div>
-                  <button class="btn-incr" @click="increment(item)">+</button>
-                </div>
-                <button class="btn btn-add" @click="addToCart(item)">
-                  Add to cart
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="cart" v-if="show" @click="viewCart">
-            <div class="cart-items">
-              <h2>Your cart</h2>
-              <div class="empty" v-if="!this.cart.length">
-                Cart is empty
-              </div>
-              <div class="cart-item" v-for="cartItem in cart" :key="cartItem.id">
-                <img :src="'../img/' + cartItem.id + '.jpeg'" alt="" />
-                <h4>{{cartItem.title}}</h4>
-                <div class="qty-count">
-                  <button class="btn-decr" @click="decrement(cartItem)">
-                    -
-                  </button>
-                  <div class="qty">{{cartItem.qty}}</div>
-                  <button class="btn-incr" @click="increment(cartItem)">
-                    +
-                  </button>
-                </div>
-                <p>{{cartItem.price * cartItem.qty}} USD</p>
-                <button class="btn btn-del" @click="delFromCart(cartItem)">
-                  &times;
-                </button>
-              </div>
-              <div class="total" v-if="this.cart.length">
-                Total: {{countTotal}} USD
-              </div>
-              <div class="buttons" v-if="this.cart.length">
-                <!-- must change behavior of order button -->
-                <button class="btn btn-order" @click="clearCart">
-                  Complete order
-                </button>
-                <button class="btn btn-clear" @click="clearCart">
-                  Clear all
-                </button>
-              </div>
-            </div>
-          </div>
-        </main>
-        <footer>All rights reserved by Pavel Belkin © 2020</footer>
-      </div>
+    <div id="app" class="container">
+      <main>
+        <header>
+          <nav>
+            <a href="#">
+              <p class="logo">Homotronics</p>
+              <p class="logo_descript">Online Shop</p>
+            </a>
+            <button class="btn btn-cart" @click="viewCart">
+              Cart <span>{{this.cart.length}}</span>
+            </button>
+          </nav>
+          <div class="slider"></div>
+        </header>
+        <div>
+          <form action="#" class="search-form" @submit.prevent="filter">
+            <input type="text" v-model="userSearch">
+            <button type="submit" class="btn btn-search">
+                <i class="fas fa-search"></i>
+            </button>
+        </form>
+          <catalog :items="filtered" @add-to-cart="addToCart" />
+        </div>
+        <cart
+          v-show="show"
+          @view-cart="viewCart"
+          :cart="cart"
+          @clear-cart="clearCart"
+          @del-from-cart="delFromCart"
+        />
+      </main>
+      <footer>All rights reserved by Pavel Belkin © 2020</footer>
     </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="components/counter.js"></script>
+    <script src="components/catalog.js"></script>
+    <script src="components/cart.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
